@@ -142,12 +142,13 @@ var
   //deprecated stuff end
   {$IFDEF OSDEBUG}
   debug_prog: boolean = True;
+  default_loglevel : integer = 8;
   {$ELSE}
   debug_prog: boolean = False;
+  default_loglevel : integer = 7;
   {$ENDIF}
   //debug_prog: boolean = True;
   debug_lib: boolean = False;
-  default_loglevel : integer = 7;
   force_min_loglevel: integer = 4;
   opsiscriptconf : string;
   ScriptErrorMessages: boolean = False;
