@@ -543,8 +543,9 @@ function CEscaping(const s: string): string;
 
 procedure GetWord
   (const s: string; var Expression, Remaining: string;
-  const WordDelimiterSet: TCharset);
-
+  const WordDelimiterSet: TCharset; searchbackward :boolean = false); overload;
+procedure GetWord(const s: string; var Expression, Remaining: string;
+  const WordDelimiterString: String; searchbackward :boolean = false);  overload;
 
 procedure WortAbspalten(const s: string; var Wortlinks, Rest: string);
 procedure IdentAbspalten(const s: string; var Ident, Value: string);
@@ -5324,23 +5325,86 @@ begin
   Result := p1;
 end;
 
+(*
 procedure GetWord(const s: string; var Expression, Remaining: string;
   const WordDelimiterSet: TCharset);
-    (* Expression ist Teilstring von s bis zu einem Zeichen von WordDelimiterSet (ausschliesslich),
-       Remaining beginnt mit dem auf dieses Zeichen folgenden Zeichen, wobei fuehrender Whitespace
-       eliminiert wird  *)
+begin
+  GetWord(s, Expression, Remaining, WordDelimiterSet, false);
+end;
+*)
+
+procedure GetWord(const s: string; var Expression, Remaining: string;
+  const WordDelimiterSet: TCharset; searchbackward :boolean = false);
+     // Expression ist Teilstring von s bis zu einem Zeichen von WordDelimiterSet (ausschliesslich),
+     // Remaining beginnt mit dem auf dieses Zeichen folgenden Zeichen, wobei fuehrender Whitespace
+     // eliminiert wird
 
 var
   i: integer = 0;
   t: string = '';
 
 begin
+  if s = '' then
+  begin
+    Expression := '';
+    Remaining := '';
+  end
+  else
+  begin
+    t := s;
+    setLength(t, length(t));
+    if searchbackward then
+    begin
+      i := length(t)+1;
+      while (i >=0) and not (t[i] in WordDelimiterSet) do
+        dec(i);
+      // if nothing found get complete string
+      if i = 0 then i:= length(t);
+    end
+    else
+    begin
+      i := 1;
+      while (i <= length(t)) and not (t[i] in WordDelimiterSet) do
+        Inc(i);
+    end;
+
+    Expression := copy(t, 1, i - 1);
+    Remaining := copy(t, i, length(t) - i + 1);
+    Remaining := CutLeftBlanks(Remaining);
+  end;
+end;
+
+
+procedure GetWord(const s: string; var Expression, Remaining: string;
+  const WordDelimiterString: String; searchbackward :boolean = false);
+      // Expression ist Teilstring von s bis zu einem Zeichen von WordDelimiterSet (ausschliesslich),
+      // Remaining beginnt mit dem auf dieses Zeichen folgenden Zeichen, wobei fuehrender Whitespace
+      // eliminiert wird
+
+var
+  i: integer = 0;
+  t: string = '';
+  tr : string;
+
+begin   // experimental
   t := s;
   setLength(t, length(t));
-  i := 1;
-
-  while (i <= length(t)) and not (t[i] in WordDelimiterSet) do
-    Inc(i);
+  if searchbackward then
+  begin
+    tr := ReverseString(s);
+    setLength(tr, length(tr));
+    i := pos(ReverseString(WordDelimiterString),tr);
+    if i > 0 then
+    begin
+      i := length(tr) - i;
+      i := i + length(WordDelimiterString);
+    end;
+  end
+  else
+  begin
+    i := pos(WordDelimiterString,t);
+    i := i + length(WordDelimiterString);
+  end;
 
   Expression := copy(t, 1, i - 1);
   Remaining := copy(t, i, length(t) - i + 1);
@@ -6232,7 +6296,7 @@ begin
       LogDatei.log(LogS, LevelInfo);
       LogDatei.NumberOfHints := LogDatei.NumberOfHints + 1;
     end;
-    inherited SaveToFile(myfilename);
+    inherited SaveToFile(myfilename,'utf8');
   end
   else
   begin
