@@ -24,6 +24,7 @@ program winst;
 {$IFDEF WINDOWS} {$DEFINE GUI} {$ENDIF}
 
 uses
+  LAZUTF8,
   lcltranslator, {$IFDEF UNIX} {$IFDEF UseCThreads}
   cthreads, {$ENDIF} {$ENDIF}
   Interfaces, // this includes the LCL widgetset
